調整 link - 加入登入後 會員管理頁籤中 訂單管理 的連結 - 加入主 logo 導向首頁的連結 - 加入 index 雙下箭頭 icon 跳轉 popular section 連結

--- a/pages/index.html
+++ b/pages/index.html
@@ -15,7 +15,7 @@
         <h1 class="display-3 fw-semibold text-white mb-lg-10 mb-8">每段旅程，都是一段故事</h1>
         <!--datepicker ejs-->
         <%- include('./layout/datepicker'); -%>
-        <a href="#"><span class="material-symbols-outlined custom-icon text-center">keyboard_double_arrow_down</span></a>
+        <a href="#popular"><span class="material-symbols-outlined custom-icon text-center">keyboard_double_arrow_down</span></a>
       </div>
     </div>
   </section>
