--- a/pages/memberCenter.html
+++ b/pages/memberCenter.html
@@ -256,6 +256,7 @@
             <%- include('./layout/footer'); -%>
 
                 <script type="module" src="../main.js"></script>
+                <script type="module" src="../assets/js/topbtn.js"></script>
                 <script type="module" src="../assets/js/collect-love.js"></script>
                 <script type="module" src="../assets/js/travel_swiper.js"></script>
                 <script type="module" src="../assets/js/filter_dorpdown.js"></script>
