--- a/pages/singleTrip.html
+++ b/pages/singleTrip.html
@@ -676,7 +676,7 @@
   </div>
 
   <%- include('./layout/footer'); -%>
-  <section class="container-fluid py-4 sticky-bottom d-block d-lg-none z-3 bg-white w-100">
+  <section class="container-fluid py-4 sticky-bottom d-block d-lg-none z-3 bg-white w-100" id="cartJS">
     <div class="container">
       <div class="d-flex justify-content-end flex-column">
         <div class="d-flex align-items-center justify-content-between mb-2">
@@ -698,6 +698,7 @@
   </section>
 
   <script type="module" src="../main.js"></script>
+  <script type="module" src="../assets/js/topbtn.js"></script>
   <script type="module" src="../assets/js/travel_swiper.js"></script>
   <script type="module" src="../assets/js/filter_dorpdown.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
