修正旅遊單一面手機板底下購物車文字

--- a/pages/index.html
+++ b/pages/index.html
@@ -12,7 +12,7 @@
     <div class="contenter z-3">
       <div class="d-flex flex-column align-items-center justify-content-between px-lg-10 py-lg-13 py-8 position-relative">
         <img src="../assets/images/logo.png" width="147px" height="56px" alt="logo" class="object-fit-cover mb-lg-10 mb-8">
-        <h1 class="display-3 fw-semibold text-white mb-lg-10 mb-8">每段旅程，都是一段故事</h1>
+        <h1 class="display-lg-3 display-5 fw-semibold text-white mb-lg-10 mb-8">每段旅程，都是一段故事</h1>
         <!--datepicker ejs-->
         <%- include('./layout/datepicker'); -%>
         <a href="#popular"><span class="material-symbols-outlined custom-icon text-center">keyboard_double_arrow_down</span></a>
@@ -23,7 +23,10 @@
   <%- include('./layout/index-content'); -%>
   <%- include('./layout/footer'); -%>
 
+  <script src="https://cdn.jsdelivr.net/npm/aos@next/dist/aos.js"></script>
+
   <script type="module" src="../main.js"></script>
+  <script type="module" src="../assets/js/topbtn.js"></script>
   <script type="module" src="../assets/js/collect-love.js"></script>
   <script type="module" src="../assets/js/travel_swiper.js"></script>
   <script type="module" src="../assets/js/filter_dorpdown.js"></script>
