更新旅程單一頁跟購物車頁

--- a/pages/cart.html
+++ b/pages/cart.html
@@ -44,7 +44,7 @@
       <li class="pro-item-bg px-lg-9 px-4 py-4 d-flex flex-lg-row flex-column justify-content-lg-between align-items-lg-center mb-4">
         <div class="d-flex align-items-center">
           <div>
-            <a href="./memberCenter.html" class="proOder-img proOder-img_1 me-lg-7 me-4"></a>
+            <a href="./singleTrip.html" class="proOder-img proOder-img_1 me-lg-7 me-4"></a>
           </div>
           <div class="mb-lg-0 mb-4">
             <h6 class="fw-medium fs-5 lh-12 text-black mb-2">日本環球影城</h6>
@@ -84,7 +84,7 @@
       <li class="pro-item-bg px-lg-9 px-4 py-4 d-flex flex-lg-row flex-column justify-content-lg-between align-items-lg-center mb-4">
         <div class="d-flex align-items-center">
           <div>
-            <a href="./memberCenter.html" class="proOder-img proOder-img_1 me-lg-7 me-4"></a>
+            <a href="./singleTrip.html" class="proOder-img proOder-img_1 me-lg-7 me-4"></a>
           </div>
           <div class="mb-lg-0 mb-4">
             <h6 class="fw-medium fs-5 lh-12 text-black mb-2">澎湖花火節</h6>
