--- a/memberCenter.html
+++ b/memberCenter.html
@@ -47,25 +47,25 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-light z-3" >   
-  <div class="container justify-content-end"> 
+    <nav class="navbar navbar-light z-3">
+  <div class="container justify-content-end">
     <!--滾動後出現-->
     <nav class="navbar navbar-expand-lg navbar-light z-3 d-none d-lg-block fixed-top bg-light">
       <div class="container">
-        <a class="navbar-brand position-relative" href="../pages/index-member.html">
-          <img src="/travel-tales/assets/logo2-22d80b9c.png" width="107px" height="40"  alt="logo">
+        <a class="navbar-brand position-relative" href="index-member.html">
+          <img src="/travel-tales/assets/logo2-22d80b9c.png" width="107px" height="40" alt="logo">
         </a>
         <ul class="d-flex ms-auto">
           <li><a class="p-1 my-1 mx-4 linkline" href="#">全部旅程</a></li>
           <li><a class="p-1 my-1 mx-4 linkline" href="#">優惠景點</a></li>
           <li><a class="p-1 my-1 mx-4 linkline" href="#">熱門旅程</a></li>
-          <li><a class="p-1 my-1 mx-4 linkline" href="#">客服中心</a></li> 
+          <li><a class="p-1 my-1 mx-4 linkline" href="#">客服中心</a></li>
           <li>
             <button class="navbar-toggler position-relative ms-auto pe-4 d-block" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
               <img src="/travel-tales/assets/member-photo-51a62db0.png" alt="member-photo" width="40px" height="40px">
             </button>
           </li>
-        </ul> 
+        </ul>
       </div>
     </nav>
   </div>
@@ -75,7 +75,7 @@
     <nav class="navbar navbar-light z-3 d-block d-lg-none fixed-top bg-light">
       <div class="d-flex justify-content-between">
         <!--logo--->
-        <a class="navbar-brand position-relative px-4" href="../pages/index-member.html">
+        <a class="navbar-brand position-relative px-4" href="index-member.html">
           <img src="/travel-tales/assets/logo2-22d80b9c.png" width="107px" height="40" alt="logo">
         </a>
         <!--漢堡--->
@@ -83,7 +83,7 @@
           <span class="material-symbols-outlined material-custom2">menu</span>
         </button>
       </div>
-    </nav>    
+    </nav>
   </div>
 </nav>
 
@@ -93,8 +93,8 @@
 <div class="navbar">
   <div class="offcanvas offcanvas-end w-lg-25" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
     <div class="offcanvas-header py-3">
-      <a class="navbar-brand position-relative" href="../pages/index-member.html">
-        <img src="/travel-tales/assets/logo2-22d80b9c.png" width="107px" height="40"  alt="logo" >
+      <a class="navbar-brand position-relative" href="index-member.html">
+        <img src="/travel-tales/assets/logo2-22d80b9c.png" width="107px" height="40" alt="logo">
       </a>
       <button class="material-symbols-outlined material-custom2" type="button" data-bs-dismiss="offcanvas" aria-label="Close">
         menu
@@ -129,12 +129,12 @@
           <ul>
             <li><a class="nav-link px-3 py-2" href="#">成為廠商</a></li>
             <li><a class="nav-link px-3 py-2" href="#">商品管理</a></li>
-            <li><a class="nav-link px-3 py-2" href="../pages/memberCenter.html">訂單管理</a></li>
+            <li><a class="nav-link px-3 py-2" href="index-member.html">訂單管理</a></li>
             <li><a class="nav-link px-3 py-2" href="#">商場審核</a></li>
             <li><a class="nav-link px-3 py-2" href="#">會員管理</a></li>
           </ul>
         </li>
-        <li class="border-bottom border-3 py-2"></li>  
+        <li class="border-bottom border-3 py-2"></li>
         <li class="nav-item px-3 mt-5">
           <a class="nav-link nav-link-mb" aria-current="page" href="#">
             <p>全部旅程</p>
@@ -146,7 +146,7 @@
             <p>優惠景點</p>
             <span class="material-symbols-outlined">arrow_forward_ios</span>
           </a>
-          
+
         </li>
         <li class="nav-item px-3">
           <a class="nav-link nav-link-mb" href="#">
@@ -164,15 +164,14 @@
         <li class="nav-item px-3 py-1">
           <a href="#" class="nav-link d-flex align-items-center">
             <span class="material-symbols-outlined pe-2">logout</span>
-           登出
+            登出
           </a>
-        </li> 
+        </li>
       </ul>
     </div>
-    
-  </div>  
-</div>  
 
+  </div>
+</div>
         <section class="container py-lg-12 py-8">
             <div class="d-flex w-100 overflow-hidden">
                 <input type="checkbox" name="" id="sideMenu-active" />
