--- a/singleTrip.html
+++ b/singleTrip.html
@@ -128,7 +128,7 @@
           <ul>
             <li><a class="nav-link px-3 py-2" href="#">成為廠商</a></li>
             <li><a class="nav-link px-3 py-2" href="#">商品管理</a></li>
-            <li><a class="nav-link px-3 py-2" href="index-member.html">訂單管理</a></li>
+            <li><a class="nav-link px-3 py-2" href="memberCenter.html">訂單管理</a></li>
             <li><a class="nav-link px-3 py-2" href="#">商場審核</a></li>
             <li><a class="nav-link px-3 py-2" href="#">會員管理</a></li>
           </ul>
