--- a/index-member.html
+++ b/index-member.html
@@ -54,7 +54,7 @@
     <!--滾動後出現-->
     <nav class="navbar navbar-expand-lg navbar-light z-3 d-none d-lg-block" id="navBarA">
       <div class="container">
-        <a class="navbar-brand position-relative d-none" href="./index.html" id="logo">
+        <a class="navbar-brand position-relative d-none" href="index.html" id="logo">
           <img src="/travel-tales/assets/logo2-22d80b9c.png" width="107px" height="40"  alt="logo">
         </a>
         <ul class="d-flex ms-auto">
@@ -104,7 +104,7 @@
 <div class="navbar">
   <div class="offcanvas offcanvas-end w-lg-25" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
     <div class="offcanvas-header py-3">
-      <a class="navbar-brand position-relative" href="../pages/index-member.html">
+      <a class="navbar-brand position-relative" href="index-member.html">
         <img src="/travel-tales/assets/logo2-22d80b9c.png" width="107px" height="40"  alt="logo" >
       </a>
       <button class="material-symbols-outlined material-custom2" type="button" data-bs-dismiss="offcanvas" aria-label="Close">
@@ -140,7 +140,7 @@
           <ul>
             <li><a class="nav-link px-3 py-2" href="#">成為廠商</a></li>
             <li><a class="nav-link px-3 py-2" href="#">商品管理</a></li>
-            <li><a class="nav-link px-3 py-2" href="../pages/memberCenter.html">訂單管理</a></li>
+            <li><a class="nav-link px-3 py-2" href="memberCenter.html">訂單管理</a></li>
             <li><a class="nav-link px-3 py-2" href="#">商場審核</a></li>
             <li><a class="nav-link px-3 py-2" href="#">會員管理</a></li>
           </ul>
