AOS未正確引入

--- a/pages/singleTrip.html
+++ b/pages/singleTrip.html
@@ -695,12 +695,18 @@
     </div>
   </section>
 
+  <script src="https://cdn.jsdelivr.net/npm/aos@next/dist/aos.js"></script>
+
   <script type="module" src="../main.js"></script>
   <script type="module" src="../assets/js/travel_swiper.js"></script>
   <script type="module" src="../assets/js/filter_dorpdown.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-element-bundle.min.js"></script>
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+
   <script>
+    AOS.init();
+
     const picModal = document.getElementById('picModal');
     picModal.addEventListener('shown.bs.modal', () => {
       // 獲取第一個縮圖
@@ -776,7 +782,6 @@
       }
     }
   </script>
-
 </body>
 
 </html>
