--- a/pages/singleTrip.html
+++ b/pages/singleTrip.html
@@ -698,6 +698,7 @@
   <script src="https://cdn.jsdelivr.net/npm/aos@next/dist/aos.js"></script>
 
   <script type="module" src="../main.js"></script>
+  <script type="module" src="../assets/js/topbtn.js"></script>
   <script type="module" src="../assets/js/travel_swiper.js"></script>
   <script type="module" src="../assets/js/filter_dorpdown.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
