修正375px加入購物車連結

--- a/pages/cart.html
+++ b/pages/cart.html
@@ -52,7 +52,7 @@
               <span class="material-symbols-outlined me-1 text-neutral-3 d-lg-block d-none">
                 calendar_today
               </span>
-              <span class="fw-medium fs-lg-6 fs-7 lh-12 text-neutral-3">2024/08/08(四)~2024/08/10(六)</span>
+              <span class="fw-medium lh-12 text-neutral-3 date-text">2024/08/08(四)~2024/08/10(六)</span>
             </div>
           </div>
         </div>
@@ -92,7 +92,7 @@
               <span class="material-symbols-outlined me-1 text-neutral-3 d-lg-block d-none">
                 calendar_today
               </span>
-              <span class="fw-medium fs-lg-6 fs-7 lh-12 text-neutral-3">2024/08/08(四)~2024/08/10(六)</span>
+              <span class="fw-medium lh-12 text-neutral-3 date-text">2024/08/08(四)~2024/08/10(六)</span>
             </div>
           </div>
         </div>
