--- a/pages/singleTrip.html
+++ b/pages/singleTrip.html
@@ -685,7 +685,9 @@
             edit
           </a>
         </div>
-        <button type="button" class="trip-btn fs-6 lh-base fw-400 w-100">加入購物車</button>
+        <a href="./cart.html"  class="trip-btn fs-6 lh-base fw-400 w-100 text-center">
+          加入購物車
+        </a>
       </div>
       <div class="d-flex justify-content-between align-items-center ">
         <span class="fs-14 fw-500 lh-12 text-neutral-3">2024/08/08(四)~2024/08/10(六)</span>
@@ -696,7 +698,6 @@
   </section>
 
   <script type="module" src="../main.js"></script>
-  <script type="module" src="../assets/js/topbtn.js"></script>
   <script type="module" src="../assets/js/topbtn.js"></script>
   <script type="module" src="../assets/js/travel_swiper.js"></script>
   <script type="module" src="../assets/js/filter_dorpdown.js"></script>
